# lzy

./: .gitignore  .maven-dockerignore  AUTHORS  CONTRIBUTING  LICENSE  RunAll.Dockerfile  __init__.py  deploy.sh  docker-zygote-run-test.sh  lzy-kharon-pod.yaml  lzy-server-pod.yaml  lzy-server-test-pod.yaml  pom.xml  readme.md  terminal-pod-2.yaml  terminal-pod.yaml  test.yaml  update-revision.sh
lzy/worker/docker/tmp-for-context/pylzy/: .pylintrc  proto_requirements.txt  pyproject.toml  requirements.txt  tox.ini
lzy/worker/docker/tmp-for-context/pylzy/lzy/: types.py
lzy/worker/docker/tmp-for-context/pylzy/lzy/api/v1/: __init__.py  runtime.py  signatures.py  snapshot.py
lzy/worker/docker/tmp-for-context/pylzy/lzy/serialization/: file.py
lzy/worker/docker/tmp-for-context/pylzy/lzy/storage/: registry.py
lzy/worker/docker/tmp-for-context/pylzy/lzy/storage/async_/: azure.py
lzy/worker/docker/tmp-for-context/pylzy/pylzy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lzy/worker/docker/tmp-for-context/pylzy/scripts/: build.sh  clean.sh  gen_proto.sh  run_tests.sh
lzy/worker/docker/tmp-for-context/pylzy/tests/api/v1/: test_grpc_runtime.py  (+1 more)
lzy/worker/docker/tmp-for-context/pylzy/tests/env_provider/: test_modules_search.py
lzy/worker/docker/tmp-for-context/pylzy/tests/stress/: task_generator.py
pylzy/tests/test_data/lzy_test_project/: foo.c  pyproject.toml  setup.py
pylzy/tests/test_data/lzy_test_project_editable/: pyproject.toml
pylzy/tests/test_data/lzy_test_project_editable/src/lzy_test_project_editable/: __init__.py  simple.py
(+5580 files in other folders)
