[project]
name = "lzy_test_project_editable"
version = "3.0.0"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}

[project.scripts]  # Optional
lzy_test_project_editable_bin = "lzy_test_project_editable:main"

[tool.setuptools]
package-data = {"lzy_test_project_editable" = ["*.dat"]}

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
